--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
     position: relative;
     background: url('./77817.jpg');
     background-size: cover;
-    background-position: center -1300px; /* Adjust the value to move the image up or down */
+ /* Adjust the value to move the image up or down */
     display: flex;
     align-items: center;
     justify-content: center;
