--- a/style.css
+++ b/style.css
@@ -145,7 +145,10 @@ section {
   width: 100vw;
   height: 100vh;
   z-index: 1;
-  background: linear-gradient(90deg, var(--primary) 65%, var(--accent) 100%);
+  /* background: linear-gradient(90deg, var(--primary) 65%, var(--accent) 100%); */
+  background-image: url(./Akatsuki.jpg);
+  background-size: cover;
+  background-position: center;
   filter: brightness(0.98);
 }
 
